# NAK_streamLink

./: .gitignore  README.md  README_BAK.md  VERSION  config.ini  install.sh  pyproject.toml  readme.json  start.sh  start_streamLink.desktop
nak-streamlink/: main.py
nakStreamLink/: interface.py  main.py  read_config.py  setup.py  test-async-tkinter.py  video_player.py
streamLink/: config.ini  service_account.json  start.sh  start_streamLink.desktop
streamLink/python/: streamLink_googleParser.py  streamLink_vlcOpener.py
streamLink/scripts/: config.sh  install.sh  requirements.txt  start.sh  update.sh
